# DocTracerRL

./: .dockerignore  .gitignore  Dockerfile.web  README.md  RESULTS.md  STATUS.md  pyproject.toml  requirements-pod.txt
configs/: default.yaml
data/musique/questions/: dev_set.json  eval_set.json  test_set.json  train_set.json
data/sft/: qwen_traj_full.jsonl  qwen_traj_smoke.jsonl  qwen_traj_smoke_dev.jsonl
notes/: analysis_dev_baseline.md
scripts/: analyze_run.py  collect_sft_data.py  run_eval.py  setup_musique.py  train_grpo_custom.py  train_sft.py  viewer.py
scripts/templates/: viewer.html
src/env/: corpus.py  document_env.py  repl.py  reward.py  verifiers_env.py
src/eval/: harness.py  live_harness.py
src/policies/: claude_action_cleaning.py  claude_policy.py  claude_prompts.py  grpo_policy.py  naive_rag.py  qwen_base_policy.py  qwen_common.py  qwen_sft_policy.py  single_shot.py  sparse_rag.py  stuffing.py
tests/: test_reward.py
tests/env/: test_verifiers_env.py
tests/policies/: test_sparse_rag.py
