[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlm-explorer"
version = "0.1.0"
description = "Gym-compatible RL environment for training LLMs to explore document collections via code execution"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "anthropic>=0.39.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "docker>=7.0",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "faiss-cpu>=1.8",
    "rank-bm25>=0.2.2",
    "rich>=13.0",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
musique = [
    "datasets>=2.0",
]
viewer = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "websockets>=12.0",
    "slowapi>=0.1.9",
]
training = [
    # Custom GRPO loop — no verifiers or vllm dependency.
    "trl>=1.3.0",
    "transformers>=4.45",
    "peft>=0.13",
    "accelerate>=1.0",
    "bitsandbytes>=0.44",
    "datasets>=4.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
